--- a/java/dd4t-lite/pom.xml
+++ b/java/dd4t-lite/pom.xml
@@ -10,7 +10,7 @@
     <name>${project.artifactId}</name>
     <version>0.0.1</version>
 
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <inceptionYear>2013</inceptionYear>
 
@@ -29,55 +29,6 @@
                 <version>1.1.3</version>
             </dependency>
 
-            <!-- SDL Tridion -->
-             <dependency>
-                <groupId>com.tridion</groupId>
-                <artifactId>cd_core</artifactId>
-                <version>${sdltridion.version}</version>
-                <scope>provided</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>com.tridion</groupId>
-                <artifactId>cd_model</artifactId>
-                <version>${sdltridion.version}</version>
-                <scope>provided</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>com.tridion</groupId>
-                <artifactId>cd_linking</artifactId>
-                <version>${sdltridion.version}</version>
-                <scope>provided</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>com.tridion</groupId>
-                <artifactId>cd_broker</artifactId>
-                <version>${sdltridion.version}</version>
-                <scope>provided</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>com.tridion</groupId>
-                <artifactId>cd_datalayer</artifactId>
-                <version>${sdltridion.version}</version>
-                <scope>provided</scope>
-            </dependency>
-
-            <!-- JUEL -->
-            <dependency>
-                <groupId>de.odysseus.juel</groupId>
-                <artifactId>juel-api</artifactId>
-                <version>2.2.6</version>
-            </dependency>
-
-            <dependency>
-                <groupId>de.odysseus.juel</groupId>
-                <artifactId>juel-impl</artifactId>
-                <version>2.2.6</version>
-            </dependency>
-
             <!-- Simple Framework -->
             <dependency>
                 <groupId>org.simpleframework</groupId>
@@ -85,39 +36,11 @@
                 <version>2.7.1</version>
             </dependency>
 
-            <!-- Google Guava -->
-            <dependency>
-                <groupId>com.google.guava</groupId>
-                <artifactId>guava-io</artifactId>
-                <version>r03</version>
-            </dependency>
-
-            <!-- Reflections -->
-            <dependency>
-                <groupId>org.reflections</groupId>
-                <artifactId>reflections</artifactId>
-                <version>0.9.9-RC1</version>
-            </dependency>
-
-            <!-- JDOM -->
-            <dependency>
-                <groupId>org.jdom</groupId>
-                <artifactId>jdom</artifactId>
-                <version>1.1.3</version>
-            </dependency>
-
             <!-- Test -->          
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
-                <scope>test</scope>
-            </dependency>
-            
-            <dependency>
-                <groupId>org.mockito</groupId>
-                <artifactId>mockito-core</artifactId>
-                <version>1.8.5</version>
                 <scope>test</scope>
             </dependency>
 
