Improved support for inner regions

--- a/cms/region-gravity-extension/region-gravity-extension/region-gravity-extension/region-gravity-extension.csproj
+++ b/cms/region-gravity-extension/region-gravity-extension/region-gravity-extension/region-gravity-extension.csproj
@@ -49,6 +49,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\Tridion.ContentManager.Common.dll</HintPath>
     </Reference>
+    <Reference Include="Tridion.Logging, Version=7.1.0.52, Culture=neutral, PublicKeyToken=ddfc895746e5ee6b, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\Tridion.Logging.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
